--- a/css/ac-style.css
+++ b/css/ac-style.css
@@ -64,7 +64,7 @@ header {
     margin-top: 40px;
     margin-right: 85px;
     line-height: 21px;
-    text-allign:justify;
+    text-align:justify;
 }
 
 .about-right {
@@ -96,6 +96,7 @@ header {
     margin-top: 290px;
     margin-right: 30px;
     line-height: 21px;
+    text-align:justify;
 }
 
 /*------------------------------------about end-------------------------------------*/
@@ -124,6 +125,7 @@ header {
     margin-top: 250px;
     margin-right: 400px;
     line-height: 23px;
+    text-align:justify;
 }
 
 .contact-img {
