--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ section {
     margin-top: 40px;
     margin-right: 335px;
     line-height: 21px;
+    text-align:justify;
 }
 .sec-black-text button {
 	margin-top: 40px;
